# genacademy-rag

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
docs/: answer-ux-decisions-and-tradeoffs.md  architecture-decisions.md  demo-script.md  deploy.md  design-review.md  design.md  learnings.md  minimal-system-design.md  phase0-decisions-and-tradeoffs.md  phase1-decisions-and-tradeoffs.md  phase2-decisions-and-tradeoffs.md  project-context.md  project-writeup.md  spike-findings.md
docs/diagrams/: README.md  architecture.drawio
eval/: REPORT.md  phase2-rerank-delta.md  phase2-section-aware-chunking-delta.md
scripts/: eval_retrieval.py  ingest_eval_corpus.py  provision_rerank_model.py  run_eval.py  smoke_http.py  smoke_nebius_embeddings.py  smoke_pinecone.py  start_hf_space.sh
specs/: mission.md  roadmap.md  tech-stack.md
specs/eval-judge/: requirements.md
specs/grader/: requirements.md
spike/: .env.example  embed_latency.py  gen_probe.py  nebius_probe.py  parse_guidebook.py  pinecone_probe.py
src/genacademy_rag/: config.py
tests/: conftest.py  test_config.py
tests/core/: test_analytics.py  test_chunker.py  test_grader.py  test_graph.py  test_ingest_pipeline.py  test_loaders.py  test_pdf_loader.py  test_providers.py  test_query_pipeline.py  test_reranker.py  test_retriever.py  test_security.py  test_sources.py  test_types.py  test_vectorstore.py
tests/data/: test_datastore.py
tests/deploy/: test_bootstrap.py  test_deploy_files.py  test_smoke_http.py
tests/eval/: test_eval_retrieval_script.py  (+6 more)
(+53 files in other folders)
