[project]
name = "genacademy-rag"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "manjunath84", email = "manjunath84@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chromadb==1.5.9",
    "fastapi==0.136.3",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "langchain-core==1.4.2",
    "langgraph==1.2.4",
    "nbformat==5.10.4",
    "openai==2.41.0",
    "pypdf==6.13.1",
    "python-multipart==0.0.32",
    "pyyaml==6.0.3",
    "rank-bm25==0.2.2",
    "requests==2.34.2",
    "sentence-transformers==5.5.1",
    "uvicorn[standard]==0.49.0",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx2>=2.3.0",
    "pytest==9.0.3",
    "ruff==0.15.16",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# spike/ is frozen exploratory probe code (docs/spike-findings.md), not shipped — don't lint it.
extend-exclude = ["spike"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: hits a live external API; skipped without a key"]
addopts = "-m 'not integration'"
